history: sort indicators data entry: added code settings/penalties: design and code settings/specs: design

--- a/styles/master.css
+++ b/styles/master.css
@@ -17,6 +17,10 @@ html,body {
 
 .number {	width: 5em;	}
 
+.underline {
+	text-decoration: underline;
+}
+
 .flagbox {
 	position: absolute;
 	width: 90px;
